# chorus-contributing

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
crates/raknet/: Cargo.toml
crates/raknet/src/: lib.rs
crates/raknet/src/protocol/: codec.rs  mod.rs
crates/raknet/src/protocol/packets/: ack.rs  connected_ping.rs  connected_pong.rs  connection_request.rs  connection_request_accepted.rs  disconnect.rs  frame_set.rs  incompatible_protocol.rs  mod.rs  new_incoming_connection.rs  open_connection_reply_1.rs  open_connection_reply_2.rs  open_connection_request_1.rs  open_connection_request_2.rs  unconnected_ping.rs  unconnected_pong.rs
crates/raknet/src/server/: config.rs  internal.rs  mod.rs
crates/raknet/src/session/: config.rs  event.rs  mod.rs  state.rs
crates/raknet/src/types/: mod.rs  priority.rs  reliability.rs
crates/raknet/src/util/: constants.rs  flags.rs  mod.rs  packet_id.rs  socket_addr.rs
docs/: index.html
src/: info.rs  lib.rs  main.rs  server.rs
src/block/: block_definition.rs  block_id.rs  block_permutation.rs  block_type.rs  mod.rs
src/block/component/: block_component.rs  block_component_map.rs  block_components.rs  collision_box_component.rs  internal_friction_component.rs  light_dampening_component.rs  map_color_component.rs  mineable_component.rs  mod.rs  moveable_component.rs  replaceable_component.rs  solid_component.rs  transparent_component.rs
src/block/component/impl/: collision_box.rs
src/block/impl/: air.rs  bedrock.rs  dirt.rs  grass_block.rs
src/block/state/: block_state.rs  common.rs  mod.rs
src/block/state/impl/: common.rs
src/config/: mod.rs
src/entity/: entity.rs  entity_abstract_arrow.rs  entity_humanoid_monster.rs  entity_minecart.rs  entity_mob.rs  entity_monster.rs  entity_throwable.rs  entity_villager.rs
src/entity/components/: ageable.rs  breedable.rs  timer.rs
src/entity/impl/mob/: pig.rs  player.rs
src/error/: block_permutation_create.rs  mod.rs
src/error/registry/: already_registered.rs
src/level/: chunk.rs  chunk_state.rs  level.rs  sub_chunk.rs
src/level/bit_array/: bit_array_version.rs  padded_bit_array.rs  pow2_bit_array.rs  singleton_bit_array.rs
src/level/palette/: palette.rs
src/logger/: mod.rs
src/math/enums/: block_face.rs  compass_rose_direction.rs  plane.rs
src/network/: mod.rs  network.rs
src/network/handler/: encryption.rs  handshake.rs  login.rs  login_packet_handler.rs  mod.rs  packet_handler.rs  request.rs  resource.rs  resource_pack.rs  setup.rs  start_session.rs  start_session_handler.rs
src/network/login/: auth_identity.rs  auth_payload.rs  auth_type.rs  encryption.rs  mod.rs
src/network/login/auth/: auth_identity.rs  auth_oidc.rs  auth_payload.rs  auth_type.rs  mod.rs
src/network/session/: mod.rs  state.rs
src/player/: mod.rs
src/registry/: block_registry.rs  mod.rs
src/resource/: mod.rs  resource_pack.rs
src/utils/: hash_utils.rs  identifier.rs  mod.rs  rolling_avg.rs  sem_version.rs  utils.rs
(+6 files in other folders)
