[package]
name = "Chorus"
version = "0.0.1"
edition = "2024"
license = "GPL-3"
authors = ["OmniacDev"]

[workspace]
members = ["crates/raknet"]

[dependencies]
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_time = "0.18.1"
bevy_tasks = "0.18.1"

crossbeam-channel = "0.5.15"

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1.0"
log = "0.4"
fern = "0.7"
fern_colored = { version = "0.6", features = ["colored"] }
chrono = "0.4"
once_cell = "1.21.3"
strum = "0.28.0"
strum_macros = "0.28.0"
rand = "0.10.0"
vek = "0.17.1"
serde_json = "1.0.140"

bedrockrs = { git = "https://github.com/bedrock-crustaceans/bedrockrs", branch = "main", features = ["full"] }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
uuid = { version = "1.16.0", features = ["v4"] }
anyhow = "1.0.102"
