[package]
name = "Chorus"
version = "0.0.1"
edition = "2024"
license = "GPL-3"
authors = ["OmniacDev"]

[workspace]
members = ["crates/raknet"]

[dependencies]
bevy_app = "0.18.1"
bevy_ecs = "0.18.1"
bevy_time = "0.18.1"
bevy_tasks = "0.18.1"

crossbeam-channel = "0.5.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
toml = "1.1.0"
chrono = "0.4"
once_cell = "1.21.3"
strum = "0.28.0"
strum_macros = "0.28.0"
rand = "0.10.0"
vek = "0.17.1"
jsonwebtoken = "10.3.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }

bedrockrs = { git = "https://github.com/bedrock-crustaceans/bedrockrs", branch = "main", features = ["full"] }
nbtx = { git = "https://github.com/bedrock-crustaceans/nbtx" }
uuid = { version = "1.16.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.4"
tracing = "0.1.44"
